# GitHub-Extractor-React

./: .gitignore  .replit  DOCUMENTATION.md  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  template1.xlsx  template2.xlsx  template_schema.xlsx
.agents/: agent_assets_metadata.toml
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/src/: app.ts
artifacts/frontend/: index.html  vite.config.ts
artifacts/frontend/.replit-artifact/: artifact.toml
artifacts/frontend/src/: App.tsx  index.css
attached_assets/: Pasted--base-apple-Apples-MacBook-Air-4-GitHub-Extractor-React_1783085388029.txt  Pasted--base-apple-Apples-MacBook-Air-4-GitHub-Extractor-pnpm-_1783239397149.txt  Pasted--base-apple-Apples-MacBook-Air-4-GitHub-Extractor-pnpm-_1783239476856.txt  Pasted--base-apple-Apples-MacBook-Air-4-final-shipper-extracto_1783085110610.txt  Pasted-The-website-is-currently-working-correctly-Please-make-_1782976440717.txt  Pasted-The-website-is-currently-working-correctly-Please-make-_1782976583891.txt  Pasted-we-don-t-have-to-worry-about-material-number-exist-in-d_1782804421100.txt
backend/: .env.example  requirements.txt  start.sh
backend/app/: main.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: azure_storage.py  database.py  excel_schema.py  extractor.py  pdf_generator.py  pdf_generator_dynamic.py  pdf_generator_template2.py  validation.py
backend/data/: template_values.json
backend/data/excel/: template1.xlsx  template2.xlsx
backend/database/: material_master.db
(+3 files in other folders)
