[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "azure-storage-blob==12.24.0",
    "fastapi==0.115.6",
    "pdfplumber==0.11.10",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "pypdf==5.1.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "reportlab==4.2.5",
    "uvicorn[standard]==0.32.1",
]
